--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,2 @@
-MONGO_URI=Hello
+MONGO_URI=mongodb+srv://rlmagtira:VwTcajntl1DGAeCW@cluster0.mjurz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-USER=user123
-PASSWORD:Pass123
