--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
+ "homepage": "https://rlmgtr.github.io/MERN-CRUD-todo",
   "type": "module",
   "scripts": {
     "dev": "vite",
