--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@vitejs/plugin-react": "^4.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "sass": "^1.84.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
