--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,24 +1,21 @@
-# Logs
-logs
-*.log
+# Node modules and build output
+node_modules/
+dist/
+.vite/
+.cache/
+
+# Logs and environment variables
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+.env
+.env.local
+.env.*.local
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# System files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# GitHub Pages cache
+.github/
