--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
-# Node modules and build output
+# Node modules and build outputs
 node_modules/
-dist/
-.vite/
-.cache/
+client/dist/
+client/.vite/
+client/.cache/
+server/dist/
+server/.cache/
 
 # Logs and environment variables
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-.env
+client/.env
+server/.env
 .env.local
 .env.*.local
 
